--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,9 +1,10 @@
-*{
+* {
     /* font-family: Poppins; */
     font-family: sans-serif;
     box-sizing: border-box;
 }
-#head-01{
+
+#head-01 {
     width: 100%;
     height: 150px;
     /* background: #1b2e51; */
@@ -15,20 +16,25 @@
     justify-content: center;
     flex-wrap: wrap;
 }
-.head{
+
+.head {
+    margin-top: 30px;
     width: 75%;
     height: 120px;
     text-align: center;
 }
-#title{
-    margin-left: -55px;
-}
-#sub-title{
+
+#title {
     margin-left: -55px;
 }
 
-                            /* Footer */
-#head-02{
+#sub-title {
+    margin-top: 20px;
+    margin-left: -55px;
+}
+
+/* Footer */
+#head-02 {
     width: 100%;
     background: url(../assets/nav-bg.png);
     background-repeat: no-repeat;
@@ -37,44 +43,51 @@
     justify-content: center;
     flex-wrap: wrap;
 }
-.head-02{
+
+.head-02 {
     width: 75%;
     height: 180px;
     text-align: center;
 }
-.mobile-rows{
+
+.mobile-rows {
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
     text-align: center;
 }
-.mobile-rows-01{
+
+.mobile-rows-01 {
     width: 50px;
     height: 40px;
     /* background: green; */
 }
-.mobile-rows-02{
+
+.mobile-rows-02 {
     width: 150px;
     height: 20px;
     font-size: 20px;
     margin-top: 10px;
 }
 
-@media(max-width: 900px)
-{
-    .head{
+@media(max-width: 900px) {
+    .head {
         height: 250px;
     }
-    #head-01{
+
+    #head-01 {
         height: 400px;
     }
-    #title{
+
+    #title {
         margin-left: 0px;
     }
-    #sub-title{
+
+    #sub-title {
         margin-left: 0px;
     }
-    .head-02{
+
+    .head-02 {
         height: 230px;
     }
 }
