--- a/src/app/details-form/details-form.component.html
+++ b/src/app/details-form/details-form.component.html
@@ -24,11 +24,15 @@
                             <td id="detail-name" class="pt-3">Academic Year</td>
                             <td id="detail-gama" class="pt-3">:</td>
                             <td class="pt-3">
-                                <select class="form-control" style="max-width: 400px;">
+                                <select class="form-control" formControlName="academic" style="max-width: 400px;"
+                                    [ngClass]="{ 'is-invalid': submitted && f.academic.errors }">
                                     <option value="">Choose...</option>
                                     <option value="1">2021-2022</option>
                                     <option value="2">2022-2023</option>
                                 </select>
+                                <div *ngIf="submitted && f.academic.errors" class="invalid-feedback">
+                                    <div *ngIf="f.academic.errors.required">Academic is required</div>
+                                </div>
                             </td>
                         </tr>
 
@@ -37,11 +41,15 @@
                             </td>
                             <td id="detail-gama" class="pt-3">:</td>
                             <td class="pt-3">
-                                <select style="max-width: 400px;" class="form-control">
+                                <select class="form-control" formControlName="year" style="max-width: 400px;"
+                                    [ngClass]="{ 'is-invalid': submitted && f.year.errors }">
                                     <option value="">Choose...</option>
                                     <option value="I Year">I Year</option>
                                     <option value="II Year">II Year</option>
                                 </select>
+                                <div *ngIf="submitted && f.year.errors" class="invalid-feedback">
+                                    <div *ngIf="f.year.errors.required">Year is required</div>
+                                </div>
                             </td>
                         </tr>
 
@@ -79,15 +87,18 @@
                             <td id="detail-name" class="pt-3">Name of the Branch</td>
                             <td id="detail-gama" class="pt-3">:</td>
                             <td class="form-group pt-3">
-                                <select class="form-control" style="max-width: 400px;">
+                                <select class="form-control" formControlName="branch" style="max-width: 400px;"
+                                    [ngClass]="{ 'is-invalid': submitted && f.branch.errors }">
                                     <option value="">Choose...</option>
                                     <option value="Computer Science">Computer Science</option>
                                     <option value="Electrical/Electronic Engineering">Electrical/Electronic Engineering
                                     </option>
                                     <option value="Mechanical Engineering">Mechanical Engineering</option>
                                     <option value="Civil Engineering">Civil Engineering</option>
-
                                 </select>
+                                <div *ngIf="submitted && f.branch.errors" class="invalid-feedback">
+                                    <div *ngIf="f.branch.errors.required">Branch is required</div>
+                                </div>
                             </td>
                         </tr>
                         <tr>
@@ -95,11 +106,15 @@
                             </td>
                             <td id="detail-gama" class="pt-3">:</td>
                             <td class="pt-3">
-                                <select class="form-control" style="max-width: 400px;">
+                                <select class="form-control" formControlName="course" style="max-width: 400px;"
+                                    [ngClass]="{ 'is-invalid': submitted && f.course.errors }">
                                     <option value="">Choose...</option>
                                     <option value="M.E Applied Electronics">M.E Applied Electronics</option>
                                     <option value="M.E COMMUNICATION SYSTEMS">M.E Communicaton Systems</option>
                                 </select>
+                                <div *ngIf="submitted && f.course.errors" class="invalid-feedback">
+                                    <div *ngIf="f.course.errors.required">Course is required</div>
+                                </div>
                             </td>
                         </tr>
                         <tr>
@@ -107,13 +122,14 @@
                             <td id="detail-gama" class="pt-3">:</td>
                             <td class="pt-3">
                                 <div class="input-box" style="max-width: 400px;">
-                                    <input formControlName="name" name="name" type="text" class="form-control">
-                                    <div class="mt-2" *ngIf="name.invalid && (name.touched || name.dirty)">
-                                        <span class="text-dangers" *ngIf="name.errors?.required">*Name is
+                                    <input type="text" class="form-control">
+                                    <!-- <div class="mt-2" *ngIf="name.invalid && (name.touched || name.dirty)">
+                                        <span class="text-danger" *ngIf="name.errors?.required">*Name is
                                             Required.</span>
                                         <span class="text-danger" *ngIf="name.errors?.pattern">*Enter only
                                             Character.</span>
-                                    </div>
+                                    </div> -->
+
                                 </div>
                             </td>
                         </tr>
@@ -122,7 +138,9 @@
                             </td>
                             <td id="detail-gama" class="pt-3">:</td>
                             <td class="pt-3">
-                                <select class="form-control" style="max-width: 400px;">
+                                <select class="form-control" formControlName="community_admitted"
+                                    style="max-width: 400px;"
+                                    [ngClass]="{ 'is-invalid': submitted && f.community_admitted.errors }">
                                     <option value="">Choose...</option>
                                     <option value="OC">OC</option>
                                     <option value="BC">BC</option>
@@ -134,13 +152,18 @@
                                     <option value="SCC">SCC</option>
                                     <option value="ST">ST</option>
                                 </select>
+                                <div *ngIf="submitted && f.community_admitted.errors" class="invalid-feedback">
+                                    <div *ngIf="f.community_admitted.errors.required">Community Admitted is required
+                                    </div>
+                                </div>
                             </td>
                         </tr>
                         <tr>
                             <td id="detail-name" class="pt-3">Community of the student</td>
                             <td id="detail-gama" class="pt-3">:</td>
                             <td class="pt-3">
-                                <select class="form-control" style="max-width: 400px;">
+                                <select class="form-control" formArrayName="community_student" style="max-width: 400px;"
+                                    [ngClass]="{ 'is-invalid': submitted && f.community_student.errors }">
                                     <option value="">Choose...</option>
                                     <option value="OC">OC</option>
                                     <option value="BC">BC</option>
@@ -152,18 +175,27 @@
                                     <option value="SCC">SCC</option>
                                     <option value="ST">ST</option>
                                 </select>
+                                <div *ngIf="submitted && f.community_student.errors" class="invalid-feedback">
+                                    <div *ngIf="f.community_student.errors.required">Community of Student is required
+                                    </div>
+                                </div>
                             </td>
                         </tr>
                         <tr>
                             <td id="detail-name" class="pt-3">Entry Mode Whether</td>
                             <td id="detail-gama" class="pt-3">:</td>
                             <td class="pt-3">
-                                <select class="form-control" style="max-width: 400px;">
+                                <select class="form-control" formControlName="mode" style="max-width: 400px;"
+                                    [ngClass]="{ 'is-invalid': submitted && f.mode.errors }">
                                     <option value="">Choose...</option>
                                     <option value="TANCET">TANCET</option>
                                     <option value="GATE">GATE</option>
                                     <option value="NONGATE">NONGATE</option>
                                 </select>
+                                <div *ngIf="submitted && f.mode.errors" class="invalid-feedback">
+                                    <div *ngIf="f.mode.errors.required">Entry Mode is required
+                                    </div>
+                                </div>
                             </td>
                         </tr>
                         <tr>
@@ -190,12 +222,13 @@
                                     </div>
                                     <div class="form-check form-check-inline">
                                         <input class="form-check-input" type="radio" name="attendanceradio" value="No"
-                                            (change)="historyofarrear($event)" checked>
+                                            (change)="historyofarrear($event)">
                                         <label class="form-check-label">No</label>
                                     </div>
                                 </div>
                             </td>
                         </tr>
+
                         <tr *ngIf="history_of_arrear inline">
                             <td id=" detail-name" class="pt-3">Details of History of Arrears
                             </td>
@@ -215,20 +248,67 @@
                             </td>
                         </tr>
 
-                        <tr>
-                            <td>fsdfjskldjfl</td>
-                            <td>:</td>
-                            <td>
-                                <div class="form-check form-check-inline">
-                                    <input class="form-check-input" type="radio" name="input01" id="inlineRadio1">
-                                    <label class="form-check-label">1</label>
+                        <tr *ngIf="current_sem1">
+                            <td id=" detail-name" class="pt-3"> Lack of Attendance
+                            </td>
+                            <td id="detail-gama" class="pt-3">:</td>
+                            <td class="pt-3">
+                                <div class="inputs" style="max-width: 200px;">
+                                    <div class="form-check form-check-inline">
+                                        <input class="form-check-input" type="radio" name="attendancelack" value="Yes"
+                                            (change)="lackofattendance($event)">
+                                        <label class="form-check-label">Yes</label>
+                                    </div>
+                                    <div class="form-check form-check-inline">
+                                        <input class="form-check-input" type="radio" name="attendancelack" value="No"
+                                            (change)="lackofattendance($event)">
+                                        <label class="form-check-label">No</label>
+                                    </div>
                                 </div>
-                                <div class="form-check form-check-inline">
-                                    <input class="form-check-input" type="radio" name="input01" id="inlineRadio1">
-                                    <label class="form-check-label">1</label>
+                                <div *ngIf="lackattendance" class="mt-3">
+                                    <textarea class="form-control" placeholder="Remarks"
+                                        style="max-width: 400px;"></textarea>
                                 </div>
                             </td>
                         </tr>
+
+                        <tr>
+                            <td id="detail-name" class="pt-3">Account No</td>
+                            <td id="detail-gama" class="pt-3">:</td>
+                            <td class="form-group pt-3">
+                                <input type="text" style="max-width: 400px;" class="form-control">
+
+                            </td>
+                        </tr>
+                        <tr>
+                            <td id="detail-name" class="pt-3">Bank Name</td>
+                            <td id="detail-gama" class="pt-3">:</td>
+                            <td class="form-group pt-3">
+                                <input type="text" style="max-width: 400px;" class="form-control">
+                            </td>
+                        </tr>
+                        <tr>
+                            <td id="detail-name" class="pt-3">IFSC code</td>
+                            <td id="detail-gama" class="pt-3">:</td>
+                            <td class="form-group pt-3">
+                                <input type="text" style="max-width: 400px;" class="form-control">
+                            </td>
+                        </tr>
+                        <tr>
+                            <td id="detail-name" class="pt-3">Contact Number</td>
+                            <td id="detail-gama" class="pt-3">:</td>
+                            <td class="form-group pt-3">
+                                <input type="text" class="form-control" style="max-width: 400px;">
+                            </td>
+                        </tr>
+                        <tr>
+                            <td id="detail-name" class="pt-3">Email Id</td>
+                            <td id="detail-gama" class="pt-3">:</td>
+                            <td class="form-group pt-3">
+                                <input type="email" class="form-control" style="max-width: 400px;">
+                            </td>
+                        </tr>
+
                         <tr>
                             <td id="detail-name" class="pt-2"></td>
                             <td id="detail-gama" class="pt-3">
