--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -50,8 +50,7 @@
                 </div>
             </div>
 
-            <button class="btn btn-outline-primary mt-4" style=" border-radius: 14px;"
-                [disabled]="registerForm.invalid">Login
+            <button class="btn btn-primary mt-4" style=" border-radius: 14px;" [disabled]="registerForm.invalid">Login
             </button>
 
             <div (click)="forgot()" style="margin-left: 190px; margin-top: 10px;"> Forgot password ? </div>
